--- a/Agent.cbp
+++ b/Agent.cbp
@@ -6,8 +6,7 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Windows">
-				<Option platforms="Windows;" />
+			<Target title="default">
 				<Option output="Agent" prefix_auto="1" extension_auto="1" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,22 +15,13 @@
 					<Add option="-march=i686" />
 				</Compiler>
 			</Target>
-			<Target title="Linux">
-				<Option platforms="Unix;" />
-				<Option output="agent" prefix_auto="1" extension_auto="1" />
-				<Option type="0" />
-				<Option compiler="gcc" />
-				<Linker>
-					<Add option="-lGL -lGLU -lglut" />
-				</Linker>
-			</Target>
 		</Build>
 		<Linker>
-			<Add library="lib/libglu32.a" />
-			<Add library="lib/libglui.a" />
-			<Add library="lib/libglut32.a" />
-			<Add library="lib/libopengl32.a" />
-			<Add library="lib/libopenglut.a" />
+			<Add library="lib\libglu32.a" />
+			<Add library="lib\libglui.a" />
+			<Add library="lib\libglut32.a" />
+			<Add library="lib\libopengl32.a" />
+			<Add library="lib\libopenglut.a" />
 		</Linker>
 		<Unit filename="GUI.cpp" />
 		<Unit filename="GUI.h" />
@@ -61,7 +51,6 @@
 		<Unit filename="include/glui_spinner.cpp" />
 		<Unit filename="include/glui_statictext.cpp" />
 		<Unit filename="include/glui_string.cpp" />
-		<Unit filename="include/glui_tree.cpp" />
 		<Unit filename="include/glui_window.cpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="random_num_gen.cpp" />
